fix: some layout bugs

--- a/site/assets/empty.css
+++ b/site/assets/empty.css
@@ -56,6 +56,7 @@ body {
 
 .navbar-light .navbar-toggler {
     color: rgba(0, 0, 0, .5);
+    outline-color: rgb(39, 174, 96);
     border-color: rgba(0, 0, 0, .1);
 }
 
